# AutoDetect

./: README.md  app.py  main.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/00739b0c9975404c89cc9e3e9a3c533b/: meta.yaml
mlruns/0/00739b0c9975404c89cc9e3e9a3c533b/metrics/: epoch  eval_loss  eval_runtime  eval_samples_per_second  eval_steps_per_second  total_flos  train_loss  train_runtime  train_samples_per_second  train_steps_per_second
mlruns/0/00739b0c9975404c89cc9e3e9a3c533b/params/: logging_dir
mlruns/0/0a5b4fcb5fb748639a1ab65c8d684987/: meta.yaml
mlruns/0/20e2d31832bd469380096486e41052e1/: meta.yaml
mlruns/0/2cf6f2cca39f44eb91206a6f07ac2e87/: meta.yaml
mlruns/0/2f8b01c9ae38428db2bc29b7673eb0b9/: meta.yaml
mlruns/0/3e0765bfe8bd484aa46ce58f5775820f/: meta.yaml
mlruns/0/48ea6409aa6045ea94b67203196e90e6/: meta.yaml
mlruns/0/5261528344474eb695438773aee9303f/: meta.yaml
mlruns/0/52b39d1a1a224d618aa0f0abc7cdf9d7/: meta.yaml
mlruns/0/7cb1c7cf682349a2a64c606f6962efae/: meta.yaml
mlruns/0/a978a39ee2614afea868e165ffc7f285/: meta.yaml
mlruns/0/bdd71ce267cb481e9508163b85380321/: meta.yaml
mlruns/0/d46d284e1bd746c9809bbdc0e1c59918/: meta.yaml
mlruns/0/d97db6f23ad44ee898db4ee7e94f9d72/: meta.yaml
mlruns/0/d98b008b9bdf40d99974a98f79ef04d5/: meta.yaml
mlruns/0/fd6bace9c9664b518b40d6b19961cd25/: meta.yaml
model/: config.json
src/: config.py
src/data/: loader.py  processor.py
src/models/: architecture.py  inference.py
src/training/: trainer.py
src/utils/: bbox.py  visualization.py
(+142 files in other folders)
